--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en" class="h-100">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="https://cdn.auth0.com/styleguide/components/1.0.8/media/logos/img/favicon.png">
+    <link rel="shortcut icon" href="https://streetartoronto.ca/favicon-32x32.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Learn how to add user authentication to React apps easily."
+      content="Street Art Toronto Dashboard"
     />
     <link
         rel="stylesheet"
@@ -15,11 +15,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
         crossorigin="anonymous"
     />
-    <link
-        rel="stylesheet"
-        href="https://cdn.auth0.com/js/auth0-samples-theme/1.0/css/auth0-theme.min.css"
-    />
-    <title>Auth0 React SDK Sample</title>
+    <title>StART Dashboard</title>
   </head>
   <body class="h-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
