--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://www.cognitoforms.com/s/vQtvojkwk0qKXX6uRXdPYA"></script>
     <script>
       AOS.init();
     </script>
