--- a/react-ui/public/index.html
+++ b/react-ui/public/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>StART Dashboard</title>
   </head>
-  <body class="h-100">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="h-100"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
