--- a/react-ui/public/index.html
+++ b/react-ui/public/index.html
@@ -25,8 +25,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script async src="https://www.cognitoforms.com/s/vQtvojkwk0qKXX6uRXdPYA"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="https://www.cognitoforms.com/s/vQtvojkwk0qKXX6uRXdPYA"></script>
     <script>
       AOS.init();
     </script>
